--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,10 @@ a {
   display: flex;
   justify-content: center;
 }
+
+@media screen and (max-width: 768px) {
+  .dot {
+    height: 18px;
+    width: 18px;
+  }
+}
